fixed pmd and checkstyle warnings